compiler/tests/snapshots/parser_snapshot__parse_grouping.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(Binary(
  op: Mul,
  lhs: Group(
    inner: Binary(
      op: Add,
      lhs: IntLit(
        value: 1,
        suffix: None,
        span: Span(
          start: 1,
          end: 2,
        ),
      ),
      rhs: IntLit(
        value: 2,
        suffix: None,
        span: Span(
          start: 5,
          end: 6,
        ),
      ),
      span: Span(
        start: 1,
        end: 6,
      ),
    ),
    span: Span(
      start: 0,
      end: 7,
    ),
  ),
  rhs: IntLit(
    value: 3,
    suffix: None,
    span: Span(
      start: 10,
      end: 11,
    ),
  ),
  span: Span(
    start: 0,
    end: 11,
  ),
))
