compiler/tests/snapshots/parser_snapshot__parse_if_else_if.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(If(IfStmt(
  condition: Binary(
    op: Gt,
    lhs: Var(
      name: "x",
      span: Span(
        start: 3,
        end: 4,
      ),
    ),
    rhs: IntLit(
      value: 0,
      suffix: None,
      span: Span(
        start: 7,
        end: 8,
      ),
    ),
    span: Span(
      start: 3,
      end: 8,
    ),
  ),
  then_block: Block(
    stmts: [
      Return(Some(IntLit(
        value: 1,
        suffix: None,
        span: Span(
          start: 18,
          end: 19,
        ),
      )), Span(
        start: 11,
        end: 20,
      )),
    ],
    span: Span(
      start: 9,
      end: 22,
    ),
  ),
  else_if_clauses: [
    (Binary(
      op: Eq,
      lhs: Var(
        name: "x",
        span: Span(
          start: 31,
          end: 32,
        ),
      ),
      rhs: IntLit(
        value: 0,
        suffix: None,
        span: Span(
          start: 36,
          end: 37,
        ),
      ),
      span: Span(
        start: 31,
        end: 37,
      ),
    ), Block(
      stmts: [
        Return(Some(IntLit(
          value: 0,
          suffix: None,
          span: Span(
            start: 47,
            end: 48,
          ),
        )), Span(
          start: 40,
          end: 49,
        )),
      ],
      span: Span(
        start: 38,
        end: 51,
      ),
    )),
  ],
  else_block: Some(Block(
    stmts: [
      Return(Some(Unary(
        op: Neg,
        operand: IntLit(
          value: 1,
          suffix: None,
          span: Span(
            start: 67,
            end: 68,
          ),
        ),
        span: Span(
          start: 66,
          end: 68,
        ),
      )), Span(
        start: 59,
        end: 69,
      )),
    ],
    span: Span(
      start: 57,
      end: 71,
    ),
  )),
  span: Span(
    start: 0,
    end: 71,
  ),
)))
