compiler/tests/snapshots/parser_snapshot__parse_if_stmt.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(If(IfStmt(
  condition: Binary(
    op: Gt,
    lhs: Var(
      name: "x",
      span: Span(
        start: 3,
        end: 4,
      ),
    ),
    rhs: IntLit(
      value: 0,
      suffix: None,
      span: Span(
        start: 7,
        end: 8,
      ),
    ),
    span: Span(
      start: 3,
      end: 8,
    ),
  ),
  then_block: Block(
    stmts: [
      Return(Some(IntLit(
        value: 1,
        suffix: None,
        span: Span(
          start: 18,
          end: 19,
        ),
      )), Span(
        start: 11,
        end: 20,
      )),
    ],
    span: Span(
      start: 9,
      end: 22,
    ),
  ),
  else_if_clauses: [],
  else_block: None,
  span: Span(
    start: 0,
    end: 22,
  ),
)))
