compiler/tests/snapshots/parser_snapshot__parse_parse_error.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Err([
  ParseError(
    span: Span(
      start: 4,
      end: 5,
    ),
    message: "expected identifier, found \'Assign\'",
    hint: None,
  ),
])
