compiler/tests/snapshots/parser_snapshot__parse_precedence.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(Binary(
  op: Add,
  lhs: IntLit(
    value: 1,
    suffix: None,
    span: Span(
      start: 0,
      end: 1,
    ),
  ),
  rhs: Binary(
    op: Mul,
    lhs: IntLit(
      value: 2,
      suffix: None,
      span: Span(
        start: 4,
        end: 5,
      ),
    ),
    rhs: IntLit(
      value: 3,
      suffix: None,
      span: Span(
        start: 8,
        end: 9,
      ),
    ),
    span: Span(
      start: 4,
      end: 9,
    ),
  ),
  span: Span(
    start: 0,
    end: 9,
  ),
))
