compiler/tests/snapshots/parser_snapshot__parse_var_decl.snap
---
source: compiler/tests/parser_snapshot.rs
expression: res
---
Ok(VarDecl(VarDecl(
  name: ("x", Span(
    start: 4,
    end: 5,
  )),
  ty_hint: None,
  init: Some(IntLit(
    value: 10,
    suffix: None,
    span: Span(
      start: 8,
      end: 10,
    ),
  )),
  span: Span(
    start: 0,
    end: 11,
  ),
)))
